# fs-text-search-mcp

./: Cargo.toml  Dockerfile  README.md  entrypoint.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  deploy.yml
src/: application.rs  file.rs  lib.rs  main.rs  search.rs
src/file/: file_filter.rs  file_watcher.rs  lazy_file_loader.rs  read_file.rs
src/search/: file.rs  index_operation.rs  search_in_dir.rs  text_index.rs
src/servers/: error.rs  search.rs
