[package]
name = "fs-text-search-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "env-filter"] }

[dev-dependencies]
