[package]
name = "fs-text-search-mcp"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
notify-debouncer-full = "0.3"
clap = { version = "4.0", features = ["derive"] }
rmcp = { version = "0.1.5", features = ["server", "transport-io"] }
serde = "1.0.219"
tantivy = "0.24.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
